ghidra_trace_rsi.txt
INFO  Using log config file: jar:file:/D:/LeagueOfLegendsV2/ghidra_full/ghidra_11.3.2_PUBLIC/Ghidra/Framework/Generic/lib/Generic.jar!/generic.log4j.xml (LoggingInitialization)  
INFO  Using log file: C:\Users\loicd\AppData\Roaming\ghidra\ghidra_11.3.2_PUBLIC\application.log (LoggingInitialization)  
INFO  Loading user preferences: C:\Users\loicd\AppData\Roaming\ghidra\ghidra_11.3.2_PUBLIC\preferences (Preferences)  
INFO  Searching for classes... (ClassSearcher)  
INFO  Class search complete (679 ms) (ClassSearcher)  
INFO  Initializing SSL Context (SSLContextInitializer)  
INFO  Initializing Random Number Generator... (SecureRandomFactory)  
INFO  Random Number Generator initialization complete: SHA1PRNG (SecureRandomFactory)  
INFO  Trust manager disabled, cacerts have not been set (ApplicationTrustManagerFactory)  
INFO  Headless startup complete (1924 ms) (AnalyzeHeadless)  
INFO  Class searcher loaded 57 extension points (18 false positives) (ClassSearcher)  
INFO  HEADLESS Script Paths:
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\8051\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\DATA\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\WildcardAssembler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\PIC\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Debug\Debugger-rmi-trace\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\GnuDemangler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\FunctionID\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\BytePatterns\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\BSim\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Base\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\MicrosoftCodeAnalyzer\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Jython\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Debug\Debugger\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\SwiftDemangler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\PDB\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\SystemEmulation\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\DecompilerDependent\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\FileFormats\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\PyGhidra\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\VersionTracking\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Features\Decompiler\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\Atmel\ghidra_scripts
    D:\LeagueOfLegendsV2\ghidra_full\ghidra_11.3.2_PUBLIC\Ghidra\Processors\JVM\ghidra_scripts (HeadlessAnalyzer)  
INFO  HEADLESS: execution starts (HeadlessAnalyzer)  
INFO  Opening existing project: D:\LeagueOfLegendsV2\ghidra_proj2 (HeadlessAnalyzer)  
INFO  Opening project: D:\LeagueOfLegendsV2\ghidra_proj2 (HeadlessProject)  
INFO  REPORT: Processing project file: /League of Legends.exe (HeadlessAnalyzer)  
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                         ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                           ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                                          ^
ReadSBox.java:17: error: illegal escape character
        println("Captured context at: D:\LeagueOfLegendsV2\client-private\Game\nethook_logs\CRYPTO_CTX_*.bin");
                                                                                            ^
skipping D:\LeagueOfLegendsV2\ghidra_scripts\ReadSBox.java
INFO  SCRIPT: D:\LeagueOfLegendsV2\ghidra_scripts\TraceRSI.java (HeadlessAnalyzer)  
INFO  TraceRSI.java> === Searching for RSI assignments before 14058b1bd === (GhidraScript)  
INFO  TraceRSI.java>   14058b06a: MOV RCX,qword ptr [RSI + 0x38] (GhidraScript)  
INFO  TraceRSI.java>   14058affa: MOVZX EDI,word ptr [RSI + 0x28] (GhidraScript)  
INFO  TraceRSI.java>   14058af8a: MOV RSI,RCX (GhidraScript)  
INFO  TraceRSI.java>   14058af82: MOV qword ptr [RSP + 0x1148],RSI (GhidraScript)  
INFO  TraceRSI.java>   14058af30: MOV qword ptr [RSP + 0x20],RSI (GhidraScript)  
INFO  TraceRSI.java>   14058af1b: MOV qword ptr [RSP + 0x20],RSI (GhidraScript)  
INFO  TraceRSI.java>   14058aeb2: MOV RSI,qword ptr [RSP + 0x310] (GhidraScript)  
INFO  TraceRSI.java> 
=== Function entry area (14058af30-14058af80) === (GhidraScript)  
INFO  TraceRSI.java>   14058af30: MOV qword ptr [RSP + 0x20],RSI (GhidraScript)  
INFO  TraceRSI.java>   14058af35: XOR R8D,R8D (GhidraScript)  
INFO  TraceRSI.java>   14058af38: XOR EDX,EDX (GhidraScript)  
INFO  TraceRSI.java>   14058af3a: XOR ECX,ECX (GhidraScript)  
INFO  TraceRSI.java>   14058af3c: CALL 0x14187871c (GhidraScript)  
INFO  TraceRSI.java>   14058af42: INT3 (GhidraScript)  
INFO  TraceRSI.java>   14058af50: PUSH RBP (GhidraScript)  
INFO  TraceRSI.java>   14058af52: PUSH RBX (GhidraScript)  
INFO  TraceRSI.java>   14058af53: PUSH R12 (GhidraScript)  
INFO  TraceRSI.java>   14058af55: LEA RBP,[RSP + -0x1020] (GhidraScript)  
INFO  TraceRSI.java>   14058af5d: MOV EAX,0x1120 (GhidraScript)  
INFO  TraceRSI.java>   14058af62: CALL 0x14184f220 (GhidraScript)  
INFO  TraceRSI.java>   14058af67: SUB RSP,RAX (GhidraScript)  
INFO  TraceRSI.java>   14058af6a: MOV RAX,qword ptr [0x141d28400] (GhidraScript)  
INFO  TraceRSI.java>   14058af71: XOR RAX,RSP (GhidraScript)  
INFO  TraceRSI.java>   14058af74: MOV qword ptr [RBP + 0x1000],RAX (GhidraScript)  
INFO  TraceRSI.java>   14058af7b: MOVZX EAX,byte ptr [RCX + 0x50] (GhidraScript)  
INFO  TraceRSI.java>   14058af7f: XORPS XMM0,XMM0 (GhidraScript)  
INFO  TraceRSI.java> 
=== DONE === (GhidraScript)  
INFO  REPORT: Save succeeded for processed file: /League of Legends.exe (HeadlessAnalyzer)  
